<resources>
    <string name="app_name">Trips</string>
    <string name="plan_name">Plans</string>
    <string name="add_trip">Add Trip</string>
    <string name="plan_category">Categories</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_meeting">Add Meeting</string>

    //Trip
    <string name="title">Title</string>
    <string name="destination">Destination</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    //Meeting
    <string name="location_name">Location Name</string>

    //
    <string name="address">Address</string>
    <string name="trips">Trips</string>
    <string name="alerts">Alerts</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="more">More</string>


    <string name="clear_map">Clear</string>
    <string name="reset_map">Reset</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="flat">Flat</string>
    <string name="rotate">Rotate Gestures</string>
    <string name="rotation">Rotation:</string>
    <string name="activity_type">Activity Type</string>
    <string name="note">Note</string>


    <string name="title_text">Trips Manager</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="details">details</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="silent">Silent</string>
    <string name="ringing">Ringing</string>
    <string name="vibrate">Vibrate</string>
    <string name="ringer_mode">Ringer Mode</string>
</resources>
