<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_item1"
        android:icon="@drawable/icons8_suitcase"
        android:title="@string/trips"/>

    <item
        android:id="@+id/action_item2"
        android:icon="@drawable/icons8_notification"
        android:title="@string/alerts"/>

    <item
        android:id="@+id/action_item3"
        android:icon="@drawable/icons8_user"
        android:title="@string/profile"/>

    <item
        android:id="@+id/action_item4"
        android:icon="@drawable/icons8_high_importance"
        android:title="@string/about"/>

    <item
        android:id="@+id/action_item5"
        android:icon="@drawable/icons8_more"
        android:title="@string/more"/>
</menu>