<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            app:hintAnimationEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/startdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date"
                android:editable="false" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            app:hintAnimationEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/starttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_time"
                android:editable="false" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            app:hintAnimationEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/enddate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_date"
                android:editable="false" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            app:hintAnimationEnabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/endtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_time"
                android:editable="false" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>